# charlie

./: implementation_plan.md
engine-rust/: Cargo.toml
engine-rust/src/: main.rs
scripts/: simulate_charger.py  simulate_charger.sh
services/gateway-go/: .gitignore  go.mod  go.sum
services/gateway-go/cmd/server/: main.go
services/gateway-go/internal/db/: charger_repo.go  db.go  session_repo.go
services/gateway-go/internal/domain/: charger.go  event.go  session.go
services/gateway-go/internal/emitter/: README.md  async_emitter.go  async_emitter_test.go  json_emitter.go  kafka_emitter.go  multi_emitter.go
services/gateway-go/internal/mapper/: boot_mapper.go  meter_mapper.go  status_mapper.go  transaction_mapper.go
services/gateway-go/internal/ocpp/: confirmations.go  handler.go
services/gateway-go/internal/store/: memory_store.go
services/gateway-go/internal/watchdog/: heartbeat.go
